@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.re-play.cz"
        name="re-play.cz"
-       version="1.0.1"
+       version="1.0.2"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.1.4" />
+    <import addon="script.module.stream.resolver" version="1.1.7" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
