@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<string id="30001">Video is not available, check[CR]whether it works using web page.</string>
+	<string id="30002">Playing this video[CR]is not yet supported.</string>
+	<string id="30003">[B]Latest episodes[/B]</string>
+	<string id="30004">Choose video source</string>
+
+	<string id="30030">Downloads</string>
+	<string id="30031">Please setup downloads folder</string>
+	<string id="30032">Notify when downloading</string>
+	<string id="30033"> - display notification every</string>
+	<string id="30034">10%</string>
+	<string id="30035">5%</string>
+	<string id="30036">1%</string>
+	<string id="30037">[B]Downloads[/B]</string>
+	<string id="30050">Video quality</string>
+	<string id="30051">Always ask</string>
+	<string id="30052">Best</string>
+	<string id="30053">Worst</string>
+	<string id="30054">720p</string>
+	<string id="30055">480p</string>
+	<string id="30056">360p</string>
+	<string id="31000">Usage of plugin is tracked whenever you play or download video.</string>
+</strings>
