@@ -1,3 +1,6 @@
+[B]1.0.2:[/B]
+- přidaná možnost stahování
+- přidaná možnost volby kvality videa
 [B]1.0.1:[/B]
 - přidán Usage Tracking
 [B]1.0.0:[/B]
